--- a/css/age.css
+++ b/css/age.css
@@ -82,14 +82,25 @@ padding:10px;
 text-decoration:none;
 }
 
-div#ageChat div{
-width: 300px;
-height: 100px;
-overflow:auto;
-}
+
 div#table {
     position: absolute;
     z-index: 5;
+}
+div.activePlayer > p{
+	background-color: #5F9EA0;
+}
+
+
+div.unactivePlayer > p{
+	background-color: #dddddd;
+}
+div.activePlayer{
+    border: 1px solid #5F9EA0;
+}
+
+div.unactivePlayer{
+    border: 1px solid #dddddd;
 }
 div.agePlayer > p{
 
@@ -98,9 +109,15 @@ div.agePlayer > p{
     margin:0;
     padding:0;
     text-align:center;
-    background-color: #5F9EA0;
+    
     margin:-20px 0 0;
 
+}
+div.playerOwner > p {
+background-color: #000000;
+}
+div.playerOwner  {
+border: 1px solid #000000;
 }
 div#ageResourcen{
     height: 200px;
@@ -113,13 +130,11 @@ div#ageResourcenHdr p{
     font-weight: bold;
     text-align: center;
 }
-div.agePlayer{
-    border: 1px solid #5F9EA0;
-}
+
 
 
 div.GroupWrapper {
-    background-color: #E0DFE3;
+    background-color: #F0F0F0;
     width:280px;
     border: 2px dashed #A0A0A0;
     float:left;
@@ -129,6 +144,8 @@ div.GroupWrapper {
 }
 
 div.GroupContener {
+	border-bottom:2px solid #DDDDDD;
+border-top:2px solid #DDDDDD;
     background-color: #ffffff;
     min-height: 20px;
     padding:2px 0;
@@ -141,7 +158,7 @@ div.GroupFooterBar {
     text-align:right;
 }
 div.CreatorWrapper{
-    border: 2px solid #D4D0C8;
+  /*  border: 2px solid #D4D0C8;*/
     padding:10px;
     
 }
@@ -158,18 +175,19 @@ font-weight:bold;
 padding:0 18px;
 }
 div.CreatorWrapper h2{
-    color:#777777;
-    font-family:sans-serif;
-    font-size:18px;
-    margin-top:0;
-    text-align:center;
+background-color:#DCDCDC;
+font-family:sans-serif;
+font-size:18px;
+margin-top:0;
+padding:2px;
+text-align:center;
 }
 div#GameSettingWrapper{
     border-bottom: 2px solid #D4D0C8;
     margin-bottom: 17px;
 }
 div#GameSetting{
-    width:339px;
+    width:360px;
     float: left;
     padding-left:14px;
 }
@@ -178,27 +196,69 @@ div#GameSetting p{
 
 }
 div#GameSetting label{
-    margin-right: 20px;
+background-color:#F6F6F6;
+display:inline-table;
+margin-right:20px;
+padding:3px 4px;
+width:109px;
+}
+
+div#GameSettingView img{
+margin-left:9px;
+margin-top:5px;
 }
 div#GameSettingView{
-    width: 300px;
-    height: 200px;
-    float: right;
-    padding-top:32px;
+	 background: url(/age/images/image-bg.png) top left no-repeat;
+	 border:3px solid #EFEFEF;
+float:right;
+height:190px;
+margin-right:36px;
+margin-top:18px;
+width:190px;
 }
 button.grpFooter, button.RsrcnFooter{
-    border: 1px solid #E0DFE3;
+    border: 1px solid #F0F0F0;
     padding: 0px;
     cursor: pointer;
+}
+div.RsrcnFooterButton{
+	width: 16px;
+	height: 16px;
+	float:right;
 }
 button.grpFooter:hover, button.RsrcnFooter:hover{
     border: 1px solid #aaaaaa;
 }
 div.ResourcenFooterBar{
-    border-bottom: 2px solid #D4D0C8;
-    background-color: #E0DFE3;
+background-color:#F0F0F0;
     margin-top: 10px;
     text-align:right;
+    position: relative;
+}
+ul.ageTemplatesList{
+bottom:0;
+padding:0;
+position:absolute;
+z-index:9999;
+margin-bottom:0;
+margin-left:24px;
+width:92px;
+}
+ul.ageTemplatesList li{
+	background-color:#FFFFFF;
+border:1px solid #DDDDDD;
+
+height:15px;
+list-style-type:none;
+padding:3px;
+text-align:left;
+width:84px;
+color:#444444;
+font-size:11px;
+}
+ul.ageTemplatesList li:hover{
+	background-color: #eeeeee;
+	cursor: pointer;
 }
 
 label.test{
@@ -322,13 +382,17 @@ position: relative;
 	width: 20px;
 		font-size: 11px;
 }
+div.ItemActionBar{
+display:block;
+position:absolute;
+top:-21px;}
 .GroupContener input{
 	margin: 0px;
 	padding:2px 1px;
 
 }
 div#GameViewResultsWrapper{
-border: 1px solid gray;
+
 min-height: 200px;
 }
 div#ResourcenContent div.bgImageView{
@@ -352,7 +416,9 @@ ul.games li img{
 	margin: 0 auto;
 	border:none;
 }
+div#ageConnectionStatus{
 
+}
 ul.games li{
 border:1px solid #AAAAAA;
 list-style-type:none;
@@ -385,9 +451,31 @@ img.GrpBgImg{
 	width: 20px;
 	height: 20px;
 }*/
-
-div#ageChat label{
-color:#dddddd;
+div#ageChatMsg{
+	width: 300px;
+height: 130px;
+overflow:auto;
+}
+div#ageChatInput input{
+	border:1px solid #DDDDDD;
+height:12px;
+width:65%;
+}
+div#ageChatInput button{
+	margin-left:5px;
+border: 1px solid #dddddd;
+}
+div#ageChatMsg p{
+	margin:0 2px;
+}
+div#ageChat .label{
+color:#888888;
+}
+div#ageChat{
+background-color:#FFFFFF;
+border:1px solid #DDDDDD;
+bottom:0;
+position:fixed;
 }
 
 /* #####################   CREATE GAME   /netbeans/webaplication/age/web/images /eclipse/workspaces/helios/age/age/images #################*/
